# MoveitArm-Example

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  edo_description.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  robotic_arm_control.yaml
edo_hardware_interface/: CMakeLists.txt  package.xml
edo_hardware_interface/config/: controllers.yaml  hardware.yaml  joint_limits.yaml
edo_hardware_interface/include/driver/: edo_driver.h
edo_hardware_interface/include/edo_hardware_interface/: edo_hardware.h  edo_hardware_interface.h
edo_hardware_interface/launch/: position_controller.launch
edo_hardware_interface/ros_commands/: edo_terminal.md
edo_hardware_interface/src/: edo_driver.cpp  edo_hardware_interface.cpp  edo_hardware_interface_node.cpp
edo_moveit_config/config/: edo_description.srdf  ompl_planning.yaml  ros_controllers.yaml
edo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  edo_description_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  robotic_arm_control.launch  ros_controllers.launch  run_benchmark_ompl.launch
edo_moveit_config/robots/: edo_gazebo.urdf
edo_moveit_config/worlds/: empty.world
launch/: demo_gazebo.launch  edo_description_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  planning_context.launch  robotic_arm_control.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robots/: edo_gazebo.urdf
