<?xml version="1.0"?>
<package format="2">
  <name>edo_hardware_interface</name>
  <version>0.0.0</version>
  <description>The edo_hardware_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dhiego@todo.todo">dhiego</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>joint_limits_interface</build_depend>
	<build_depend>edo_core_msgs</build_depend>
  
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>tr1_description</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>edo_core_msgs</exec_depend>


</package>
